<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.blackducksoftware.tools</groupId>
	<artifactId>scmconnector</artifactId>
	<version>1.5.1-SNAPSHOT</version>

	<properties>
		<slf4j.version>1.7.5</slf4j.version>
    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
	    
	    <dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>1.9.5</version>
			<scope>test</scope>
		</dependency>
		
	    <dependency>
	  		<groupId>com.blackducksoftware.tools</groupId>
	  		<artifactId>cf-6x-connector</artifactId>
  			<version>1.0.9</version>
    	</dependency>
    	
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.14</version>
		</dependency>
		   <dependency>
	        <groupId>org.slf4j</groupId>
	        <artifactId>slf4j-api</artifactId>
	        	<version>${slf4j.version}</version>
	     </dependency>
	     	    <dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			 <version>${slf4j.version}</version>
		</dependency>
		
		<dependency>
			<groupId>commons-digester</groupId>
			<artifactId>commons-digester</artifactId>
			<version>2.1</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.3.1</version>
		</dependency>
		            
		<dependency>
			<groupId>org.quartz-scheduler</groupId>
			<artifactId>quartz</artifactId>
			<version>1.8.3</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.lib</groupId>
			<artifactId>cvsclient</artifactId>
			<version>20060125</version>
		</dependency>
		<dependency>
			<groupId>it.sauronsoftware</groupId>
			<artifactId>ftp4j</artifactId>
			<version>1.6</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<groupId>org.jvnet.hudson.plugins</groupId>
			<artifactId>perforce</artifactId>
			<version>1.3.15</version>
			<exclusions>
			<exclusion>
			    <groupId>org.slf4j</groupId>
				<artifactId>slf4j-simple</artifactId>
			</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.perforce</groupId>
			<artifactId>p4java</artifactId>
			<version>2013.1.656196</version>
		</dependency>
		<dependency>
			<groupId>org.apache.velocity</groupId>
			<artifactId>velocity</artifactId>
			<version>1.6.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-exec</artifactId>
			<version>1.1</version>
		</dependency>
		
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>1.0.2</version>
		</dependency>
		
		<dependency>
		<!--  This avoids a conflict over different xerces library versions used at runtime -->
    		<groupId>xerces</groupId>
    		<artifactId>xercesImpl</artifactId>
    	<version>2.11.0</version>
		</dependency>
		
		<dependency>
			<groupId>com.blackducksoftware.plugins</groupId>
			<artifactId>protex-plugin-integration</artifactId>
			<version>1.0.7</version>
		</dependency>
    
	</dependencies>

<build>
		<finalName>protex-scm-connector-${project.version}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<id>copy-libs</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>
								${project.build.directory}/lib
							</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>


			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.3.1</version>

				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>assemble</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<platforms>
						<platform>windows</platform>
						<platform>unix</platform>
					</platforms>
					<binFileExtensions>
						<unix>.sh</unix>
					</binFileExtensions>

					<assembleDirectory>${project.build.directory}/deploy</assembleDirectory>
					<repositoryLayout>flat</repositoryLayout>
					<repositoryName>lib</repositoryName>
					<useWildcardClassPath>true</useWildcardClassPath>
					<programs>
						<program>
							<mainClass>com.blackducksoftware.tools.scmconnector.core.ConnectorRunner</mainClass>
							<name>SCMConnector</name>
						</program>
					</programs>
					<extraJvmArguments>-Xmx1024m -Xms1024M</extraJvmArguments>

					<configurationDirectory>./properties</configurationDirectory>
					<configurationSourceDirectory>${project.basedir}/src/main/resources</configurationSourceDirectory>
					<copyConfigurationDirectory>true</copyConfigurationDirectory>
					<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
				</configuration>
			</plugin>

			<!--  Generate the zip -->

					<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>			
				<version>2.4</version>
				<executions>
					<execution>
						<id>assembly</id> 
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<descriptors>
								<descriptor>src/main/resources/assembly.xml</descriptor>
							</descriptors>
							<descriptorRef>build-zip</descriptorRef>
							<appendAssemblyId>false</appendAssemblyId>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.11</version>
				<dependencies>
 					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>2.12</version>
					</dependency>
				</dependencies>
				<configuration>
					<argLine>-XX:MaxPermSize=128m -Xms64m -Xmx256m</argLine>
					<includes>
						<include>**/*Test.class</include>
					</includes>

				</configuration>
			</plugin>
    
    		<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.16</version>
				<executions>
					<execution>
            			<goals>
              				<goal>integration-test</goal>
              				<goal>verify</goal>
            			</goals>
          			</execution>
        		</executions>
        		<configuration>
        			<argLine>-XX:MaxPermSize=128m -Xms64m -Xmx256m</argLine>
					<includes>
						<include>**/*IT.class</include>
					</includes>
				</configuration>
			</plugin>
			
			<!-- Copy the zip to the local repo (.m2/repository) -->
			<!-- The only reason this is here is because the zip file is currently being installed into the local repo (.m2/repository) -->
			<!-- with the wrong name (it has the version appended twice). If we can solve that problem, this maven-install-plugin stuff -->
			<!-- should be unnecessary. -->
			<plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.4</version>
          <executions>
            <execution>
              <id>installzip</id>
              <phase>install</phase>
              <goals>
                <goal>install-file</goal>
              </goals>
              <configuration>
                <file>target/protex-scm-connector-${project.version}.zip</file>
                <groupId>com.blackducksoftware.sdk</groupId>
                <artifactId>protex-scm-connector</artifactId>
                <version>${project.version}</version>
                <packaging>zip</packaging>
              </configuration>
            </execution>
           </executions>
		</plugin>	
		
			<plugin>
	      <groupId>org.apache.maven.plugins</groupId>
	      <artifactId>maven-source-plugin</artifactId>
	      <version>2.1.2</version>
	      <executions>
	        <execution>
	          <goals>
	            <goal>jar-no-fork</goal>
	          </goals>
	        </execution>
	      </executions>
	    </plugin>

		</plugins>

		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-dependency-plugin
										</artifactId>
										<versionRange>
											[2.4,)
										</versionRange>
										<goals>
											<goal>
												copy-dependencies
											</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>

							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>


	<repositories>
	<repository>
			<id>jcenter</id>
			<name>JCenter</name>
			<url>http://jcenter.bintray.com</url>
		</repository>
		<repository>
			<id>bds-bintray-tools</id>
			<name>BDS Bintray Tools</name>
			<url>http://dl.bintray.com/bds/tools</url>
		</repository>
		<repository>
			<id>bds-bintray-sdk</id>
			<name>BDS Bintray SDK</name>
			<url>http://dl.bintray.com/bds/sdk</url>
		</repository>

		<!-- This is required for it.sauronsoftware:ftp4j:jar:1.6 -->
		<repository>
			<id>maven-repo.evolvis</id>
			<name>Maven Repo Evolvis</name>
			<url>http://maven-repo.evolvis.org/3rdparty</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>

		</repository>
		
		<!-- This is required for /org/jvnet/hudson/plugins/perforce/1.3.15 -->
		<repository>
			<id>maven-us.nuxeo</id>
			<name>Maven US Nexeo</name>
			<url>https://maven-us.nuxeo.org/nexus/content/repositories/thirdparty-releases</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>

		</repository>
		
		
	</repositories>

	<!-- Push artifact to internal BLack Duck repo for integration testing -->
	<distributionManagement>
		<repository>
			<id>artifactory.blackducksoftware.com</id>
			<name>artifactory.blackducksoftware.com-releases</name>
			<url>http://artifactory.blackducksoftware.com:8081/artifactory/soleng</url>
		</repository>
		<snapshotRepository>
			<id>artifactory.blackducksoftware.com</id>
			<name>artifactory.blackducksoftware.com-snapshots</name>
			<url>http://artifactory.blackducksoftware.com:8081/artifactory/soleng</url>
		</snapshotRepository>

	</distributionManagement>

</project>
